--- a/docs/Affinity_Testing.ipynb
+++ b/docs/Affinity_Testing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "source": [
-    "In this notebook, we will analyze the homophilia of most of the connectomes in Connectocross. We will plot the adjacency matrices and the nodes in 3d space to visualize the homophilic character of these connectomes."
+    "In this notebook, we will analyze the homophilia of most of the connectomes in Connectocross. We will plot the adjacency matrices and nodes of Ciona in 3d space to visualize its homophilic character."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -315,6 +315,13 @@
    "source": [
     "## Calculating Homophilic Affinity Using Fisher's Exact Test and Plotting Communities"
    ]
+  },
+  {
+   "source": [
+    "Below, we calculate the homophilic affinity of each connectome. For Ciona in particular, since it is homophilic by Fisher's Exact Test, we are going to plot its adjacency matrix and its nodes in 3d space to visualize this."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
