Explain colors, explain worm, explain only ciona

--- a/docs/Affinity_Testing.ipynb
+++ b/docs/Affinity_Testing.ipynb
@@ -50,6 +50,8 @@
     "\n",
     "ciona, ciona_e_att, ciona_n_att, ciona_g_att  = GraphIO.load('../json_connectomes/ciona.json')\n",
     "fafb, fafb_e_att, fafb_n_att, fafb_g_att = GraphIO.load('../json_connectomes/fafb.json')\n",
+    "\n",
+    "# Here we import the generic worm_wiring multigraph, as we are not interested in sex-based differences in homophilia in this notebook.\n",
     "worm, worm_e_att, worm_n_att, worm_g_att = GraphIO.load('../json_connectomes/worm_wiring_connectome_0_SL.json')\n",
     "\n",
     "wit_0, wit_0_e_att, wit_0_n_att, wit_0_g_att = GraphIO.load('../json_connectomes/witvilet/0.json')\n",
@@ -318,7 +320,7 @@
   },
   {
    "source": [
-    "Below, we calculate the homophilic affinity of each connectome. For Ciona in particular, since it is homophilic by Fisher's Exact Test, we are going to plot its adjacency matrix and its nodes in 3d space to visualize this."
+    "Below, we calculate the homophilic affinity of each connectome. For Ciona in particular, since it is homophilic by Fisher's Exact Test, we are going to plot its adjacency matrix and its nodes in 3d space to visualize this. For the rest, we just provide the results as a contingency table."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -604,6 +606,13 @@
     "print(\"Statistic: {}\".format(fisher_exact(con_table)[0]))\n",
     "print(\"P-Value: {}\".format(fisher_exact(con_table)[1]))"
    ]
+  },
+  {
+   "source": [
+    "In the adjacency plot above, the darker entries indicate stronger connections between the node represented by the column and the node represented by the row. In the case of nanoscale connectomics, these darker colors indicate a greater number of synaptic sites linking the column node to the row node."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
