--- a/docs/Affinity_Testing.ipynb
+++ b/docs/Affinity_Testing.ipynb
@@ -800,6 +800,13 @@
    ]
   },
   {
+   "source": [
+    "Below are plots of the connectomes in 3d, with nodes being the location of somas and edges indicates whether one neuron is synapsed to another. In the first plot, we show architecture and orientation of Ciona in space. In the second figure, we will label the homophilic edges and see their distribution in space."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
