--- a/docs/Affinity_Testing.ipynb
+++ b/docs/Affinity_Testing.ipynb
@@ -801,7 +801,7 @@
   },
   {
    "source": [
-    "Below are plots of the connectomes in 3d, with nodes being the location of somas and edges indicates whether one neuron is synapsed to another. In the first plot, we show architecture and orientation of Ciona in space. In the second figure, we will label the homophilic edges and see their distribution in space."
+    "Below are plots of the Ciona connectome in 3d, with nodes being the location of somas and edges indicating whether one neuron is synapsed to another. In the first plot, we show the architecture and orientation of Ciona in space. In the second figure, we will label the homophilic edges and see their distribution in space."
    ],
    "cell_type": "markdown",
    "metadata": {}
